[package]
name = "pdf-writer-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
pdf-writer = "0.5.0"
miniz_oxide = "0.4"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
js-sys = "0.3.57"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Response',
    'HtmlImageElement',
    'Document',
    'Window',
]